# youtube-to-mp3-xor-wav

./: .gitignore  Aiya.md  BuildNotes.md  CMakeLists.txt  Desktop.md  README.md  README2.md  Tech.md  TechStackIdeas.md  TechStackUse.md  Web.md  changelog  package.json  proggres.md  um.scss
backend/: CMakeLists.txt
backend/cpp/src/: example.cpp  main.cpp
backend/python/: requirements.txt
docs/: BuildNotes.txt  DevLogs.md  FrontEnd.md  RandoTech.md  Web.md  hierarchy.scss
